--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,6 @@ body {
 /* ===================
     ALL: Black and Green Theme
    =================== */
-
 .header-container {
     border-bottom: 20px solid #59A54A;
 }
@@ -143,6 +142,11 @@ nav a:hover {
 .main article h1 {
     font-size: 2em;
 }
+
+.main article h1 sub {
+    font-size: 1em;
+}
+
 
 .main aside {
     color: white;
@@ -275,6 +279,7 @@ nav a:hover {
     .wrapper {
         width: 1026px; /* 1140px - 10% for margins */
         margin: 0 auto;
+        overflow:hidden;
     }
 }
 
@@ -409,4 +414,61 @@ nav a:hover {
     h3 {
         page-break-after: avoid;
     }
+}
+
+/*----------------------------
+    Thumbnails
+-----------------------------*/
+
+.thumbs{
+    width:80%;
+    margin:60px auto 35px;
+    text-align:center;
+}
+
+.thumbs a{
+    width:120px;
+    height:120px;
+    display:inline-block;
+    border:7px solid #303030;
+    box-shadow:0 1px 3px rgba(0,0,0,0.5);
+    border-radius:4px;
+    margin: 6px 6px 40px;
+    position:relative;
+    text-decoration:none;
+    
+    background-position:center center;
+    background-repeat: no-repeat;
+    
+    background-size:cover;
+    -moz-background-size:cover;
+    -webkit-background-size:cover;
+}
+
+.thumbs a:after{
+    background-color: #303030;
+    border-radius: 7px;
+    bottom: -136px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    color: #FFFFFF;
+    content: attr(title);
+    display: inline-block;
+    font-size: 10px;
+    max-width: 90px;
+    overflow: hidden;
+    padding: 2px 10px;
+    position: relative;
+    text-align: center;
+    white-space: nowrap;
+}
+
+#credit{
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 8px;
+    font-size: 11px;
+    margin: 0 auto 70px;
+    opacity: 0.5;
+    padding: 12px 16px;
+    text-align: center;
+    width: 400px;
 }
