--- a/templates/dawg_base.html
+++ b/templates/dawg_base.html
@@ -22,13 +22,13 @@
         <![endif]-->
         <div class="header-container">
             <header class="wrapper clearfix">
-            <h1 class="title">Hoe Count</h1><br/>
-                <h3 class="title">[Tagline]</h3>
+            <h1 class="title">Hoe Count 
+            <sub><!--h3 class="title"-->[Tagline]<!--/h3--></sub></h1>
                 <nav>
                     <ul>
-                        <li><a href="/" title="A little about me.">Overview</a></li>
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
+                        <li><a href="/" title="Main fuckin page">Overview</a></li>
+                        <!--li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li-->
                     </ul>
                 </nav>
             </header>
@@ -38,7 +38,7 @@
             <div class="main wrapper clearfix">
 
 
-      {% block article %}{% endblock %}
+                {% block bio %}{% endblock %}
                 <aside class="profile">
                 <!--Guess the profile related things. will come here.-->
                 <p>Profile related</p>
@@ -47,6 +47,9 @@
                 {% block aside %} {% endblock %}
 
             </div> <!-- #main -->
+            <div class="hoes">
+              {%block hoes%}{%endblock%}
+            </div>
         </div> <!-- #main-container -->
 
 
@@ -57,10 +60,10 @@
         </div>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script src="http://coderwall.com/javascripts/jquery.coderwall.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
 
         <script src="js/main.js"></script>
+        {% block js_bot %}{% endblock %}
 
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </body>
